--- a/styles/style.css
+++ b/styles/style.css
@@ -5,30 +5,33 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    margin-left: 137px;
-}
+
+
 header {
     width: 100%;
-    height: 100px;
 	background-color: white;
+    padding: 11px 0;
 	position: fixed;
 	z-index: 10;   
+    top: 0;
 }
-ul{
-    margin-top: 21px;
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
 }
+
 li{
     display: inline-block;      
     vertical-align: middle; 
-    margin-left: 35px;
-    margin-top: -35px;
+    margin-right: 35px;
 }
 .logo{
     width: 50px;
     height: 50px;
     display: inline-block;
-    margin-left: 50px;
+    vertical-align: middle;
 }
 /*  */
 /*  */
@@ -37,9 +40,11 @@ li{
 /*  */
 /*  */
 /*  */
-.container{
-    margin-left: 137px;
+
+main {
+    height: 1000px; /* ეს სქროლი რომ გაუჩნდეს მაგალითისთვის დავამატე შეგიძლია წაშალო */
 }
-p{
-    margin: 500px;
+
+p {
+    margin-top: 100px;
 }
